# mi-coach-brain-backend

./: .env.example  README.md  main.py  pyproject.toml
brain/: mocks.py  schemas.py  serializers.py  services.py  urls.py  views.py
core/: settings.py  urls.py
